Fix for dropdowns and form inputs on smaller screens

--- a/components/deck/deckDropdown.module.css
+++ b/components/deck/deckDropdown.module.css
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 900px) {
   .dropdown {
-    width: 100%;
-    left: 0;
+    width: 80%;
+    left: 10%;
   }
 }
