--- a/components/deckForms/deckFormInputs.module.css
+++ b/components/deckForms/deckFormInputs.module.css
@@ -44,5 +44,6 @@
 
   .tagSection button {
     flex-basis: 100%;
+    margin-top: 15px;
   }
 }
