--- a/components/searchBar/searchFilter.module.css
+++ b/components/searchBar/searchFilter.module.css
@@ -24,11 +24,6 @@
   filter: var(--highlight-filter);
 }
 
-.filters {
-  position: relative;
-  display: inline-block;
-}
-
 .dropdown {
   position: absolute;
   background-color: var(--background);
@@ -73,8 +68,8 @@
 
 @media screen and (max-width: 650px) {
   .dropdown {
-    width: 100%;
-    left: 0;
+    width: 80%;
+    left: 10%;
   }
 
   .checkbox input {
